[package]
name = "webmention"
version = "0.1.0"
authors = ["Patrick M. Niedzielski <patrick@pniedzielski.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.104"
serde_with = "1.4.0"
url = "2.1.1"
