[package]
name = "webmention"
version = "0.1.0"
authors = ["Patrick M. Niedzielski <patrick@pniedzielski.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
reqwest = "0.10.4"
serde = "1.0.104"
serde_with = "1.4.0"
url = "2.1.1"
